[gd_scene load_steps=7 format=3 uid="uid://cjgvf0q3ax7l4"]

[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_tebtj"]
[ext_resource type="FontFile" uid="uid://bhgqu765qudb4" path="res://assets/SpaceMono-Regular.ttf" id="1_w410v"]
[ext_resource type="AudioStream" uid="uid://dgypv1jgsm1lc" path="res://assets/sfx/Menu click.mp3" id="3_qoild"]
[ext_resource type="AudioStream" uid="uid://cc575r2fa53x4" path="res://assets/sfx/level complete.mp3" id="4_qhx0y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfso7"]
bg_color = Color(0.631373, 0.105882, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwnyy"]
bg_color = Color(0.505882, 0.0784314, 0.14902, 1)

[node name="WinScreen" type="CanvasLayer"]
process_mode = 3

[node name="WinScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tebtj")

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0941176, 0.0784314, 0.145098, 0.901961)

[node name="Label" type="Label" parent="WinScreen"]
layout_mode = 0
offset_left = 408.0
offset_top = 144.0
offset_right = 872.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("1_w410v")
theme_override_font_sizes/font_size = 50
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="WinScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen"]
layout_mode = 0
offset_left = 456.0
offset_top = 328.0
offset_right = 824.0
offset_bottom = 454.0
theme_override_constants/separation = 50

[node name="Retry" type="Button" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_w410v")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_hfso7")
theme_override_styles/normal = SubResource("StyleBoxFlat_jwnyy")
text = "Replay Level"

[node name="Main Menu" type="Button" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_w410v")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_hfso7")
theme_override_styles/normal = SubResource("StyleBoxFlat_jwnyy")
text = "Main Menu
"

[node name="sfx_click" type="AudioStreamPlayer" parent="WinScreen"]
stream = ExtResource("3_qoild")

[node name="sfx_win" type="AudioStreamPlayer" parent="WinScreen"]
stream = ExtResource("4_qhx0y")
volume_db = -2.0

[connection signal="pressed" from="WinScreen/VBoxContainer/Retry" to="WinScreen" method="_on_retry_pressed"]
[connection signal="pressed" from="WinScreen/VBoxContainer/Main Menu" to="WinScreen" method="_on_main_menu_pressed"]
